- Rewrote whole config system